# ADVANCEQRCODEGERNATOR

./: .env.example  .gitignore  2FA_SETUP_GUIDE.md  ADMIN_USER_MANAGEMENT.md  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  FEATURES.md  FINAL_STATUS.md  HOW_TO_RUN.md  OAUTH_SETUP_GUIDE.md  PRODUCTION_READY.md  Procfile  QR_CUSTOMIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SECURITY_AUDIT.md  SETUP_GUIDE.md  START_HERE.md  manage.py  pyproject.toml  requirements.txt  start.bat  start.sh
core/: context_processors.py  coupon.py  crypto.py  email_verification.py  emails.py  kelley_seal.py  models.py  mongo.py  oauth_logic.py  pipeline.py  qr_history.py  subscription.py  tests.py  totp.py  urls.py  views.py
core/management/commands/: reset_qr_counts.py  seed_data.py  setup_admin_subscription.py
core/templates/: admin_dashboard.html  admin_reset_2fa.html  audit_logs.html  base.html  change_password.html  coupon_entry.html  create_profile.html  dashboard.html  home.html  password_reset.html  payment_confirmation.html  pricing.html  privacy_policy.html  profile_detail.html  qr_history.html  subscription_details.html  terms_of_service.html  update_profile.html  user_management.html
core/templates/registration/: account_recovery.html  login.html  register.html  verify_2fa.html
core/templatetags/: custom_filters.py
ktvs/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
