[project]
name = "advanceqrcodegernator"
version = "0.1.0"
description = "Advanced QR Code Generator - A Django-based web application for creating, customizing, and managing QR codes with enterprise-grade security, 2FA support, and subscription tiers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.3",
    "django>=5.2.9",
    "gunicorn>=23.0.0",
    "mongoengine>=0.29.1",
    "pillow>=12.0.0",
    "pymongo>=4.15.5",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
    "social-auth-app-django>=5.6.0",
]
